--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "path": "^0.12.7",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
+        "puppeteer": "^10.4.0",
         "sequelize": "^6.7.0"
     },
     "devDependencies": {
