--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
         "puppeteer": "^10.4.0",
-        "sequelize": "^6.7.0"
+        "sequelize": "^6.7.0",
+        "sequelize-cli": "^6.2.0"
     },
     "devDependencies": {
         "concurrently": "^6.0.1",
