Get funcionando, post com problema

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,5 +4,5 @@ module.exports = {
   config: path.resolve(__dirname, 'src', 'database', 'config', 'database.js'),
   'migrations-path': path.resolve(__dirname, 'src', 'database', 'migrations'),
   'seeders-path': path.resolve(__dirname, 'src', 'database', 'seeds'),
-  'models-path': path.resolve(__dirname, 'src', 'database', 'models'),
+  'models-path': path.resolve(__dirname, 'src', 'models'),
 };
