--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "dependencies": {
         "@material-ui/core": "^4.11.3",
         "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "concurrently": "6.0.1",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "nodemon": "^2.0.7",
         "path": "^0.12.7",
         "pg": "^8.7.1",
