--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "pg-hstore": "^2.3.4",
         "puppeteer": "^10.4.0",
         "sequelize": "^6.7.0",
-        "sequelize-cli": "^6.2.0"
+        "sequelize-cli": "^6.2.0",
+        "twit": "^2.2.11"
     },
     "devDependencies": {
         "concurrently": "^6.0.1",
