--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "nodemailer": "^6.7.2",
+        "nodemailer-express-handlebars": "^4.0.0",
         "nodemon": "^2.0.7",
         "path": "^0.12.7",
         "pg": "^8.7.1",
